Full functional add, delete from strapi

--- a/strapi-lesson/index.html
+++ b/strapi-lesson/index.html
@@ -11,8 +11,9 @@
     <body>
         <h1>Strapi - JS2 Module3 Lesson1</h1>
         <ul id="hotels-list">
-
         </ul>
+        <input type="text" id="input-name"/> 
+        <button type="button" id="add-hotel">Add</button>
         <script src="index.js" type="module"></script>
     </body>
 </html>
