--- a/strapi-lesson/index.html
+++ b/strapi-lesson/index.html
@@ -21,6 +21,21 @@
                 </ul>
         </section>
 
+        <section class="container mt-5">
+            <h2>Login</h2>
+            <form id="login-form">
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="input-email" aria-describedby="emailHelp">
+                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="input-password">
+                </div>
+                <button class="btn btn-primary">Submit</button>
+              </form>
+        </section>
         <script src="index.js" type="module"></script>
     </body>
 </html>
